--- a/03 Stateful Component/package.json
+++ b/03 Stateful Component/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
