--- a/01.5 Move To JSX/package.json
+++ b/01.5 Move To JSX/package.json
@@ -5,10 +5,20 @@
   "repository": "https://github.com/Lemoncode/integrate-react-legacy-apps.git",
   "author": "Santiago Camargo <santi.camargo@lemoncode.net>",
   "license": "MIT",
+  "scripts": {
+    "build": "gulp build:watch"
+  },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2"
   }
 }
