--- a/01.5 Move To JSX/package.json
+++ b/01.5 Move To JSX/package.json
@@ -16,9 +16,9 @@
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
-    "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
-    "gulp": "^3.9.1",
+    "del": "^2.2.2",
+    "gulp": "gulpjs/gulp#4.0",
     "gulp-babel": "^6.1.2"
   }
 }
