--- a/03 Stateful Component/package.json
+++ b/03 Stateful Component/package.json
@@ -5,10 +5,20 @@
   "repository": "https://github.com/Lemoncode/integrate-react-legacy-apps.git",
   "author": "Santiago Camargo <santi.camargo@lemoncode.net>",
   "license": "MIT",
+  "scripts": {
+    "build": "gulp build",
+    "build:watch": "gulp"
+  },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
+  },
+  "devDependencies": {
+    "babel-preset-react": "^6.22.0",
+    "del": "^2.2.2",
+    "gulp": "gulpjs/gulp#4.0",
+    "gulp-babel": "^6.1.2"
   }
 }
