--- a/05.A Angular controllerAS & directive/package.json
+++ b/05.A Angular controllerAS & directive/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/Lemoncode/integrate-react-legacy-apps.git",
-  "author": "Santiago Camargo <santi.camargo@lemoncode.net>",
+  "author": "Lemoncode",
   "license": "MIT",
   "scripts": {
     "build": "gulp build",
