--- a/05.B Angular controllerAS & factory/package.json
+++ b/05.B Angular controllerAS & factory/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/Lemoncode/integrate-react-legacy-apps.git",
-  "author": "Lemoncode",
+  "author": "Lemoncode <info@lemoncode.net>",
   "license": "MIT",
   "scripts": {
     "build": "gulp build",
